[tool.poetry]
name = "repl_python3_beta_quantifiedselfapp"
version = "0.1.0"
description = ""
authors = ["NONGMAITHEM-AVI <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Werkzeug = "^2.0.3"
Flask = "^2.0.3"
Flask-Bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
